# code_grabber

./: .gitignore  Cargo.toml  README.md
crates/code-grabber-cli/: Cargo.toml
crates/code-grabber-cli/src/: main.rs
crates/code-grabber-core/: Cargo.toml
crates/code-grabber-core/src/: classify.rs  config.rs  discover.rs  error.rs  extract.rs  format.rs  lib.rs  profile.rs  report.rs  sanitize.rs  tokenize.rs
crates/code-grabber-core/tests/: bundle.rs  profile.rs  sanitize.rs
crates/code-grabber-gui/: Cargo.toml
crates/code-grabber-gui/src/: main.rs
